# spc2it

./: CMakeLists.txt  it.c  it.h
src/: emu.c  emu.cpp  emu.h  it.c  it.cpp  it.h  lib.h  main.c  main.cpp
